--- a/.config/mpvlock/mpvlock.conf
+++ b/.config/mpvlock/mpvlock.conf
@@ -7,7 +7,7 @@
 ##################### Neon Jinx Theme for mpvlock ######################
 
 background {
-    monitor = DP-3
+    monitor = 
     path = $HOME/.config/mpvlock/themes/neon_jinx/neon_jinx.mp4
     mpvpaper_mute = 0 # mute = 1, unmute = 0
     mpvpaper_fps = 60
@@ -20,7 +20,7 @@ background {
 ##################### Example shapes #######################
 #Rectangle
 #shape {
-#    monitor = DP-3
+#    monitor =
 #    size = 800, 1500
 #    color = rgba(0, 0, 0, 0.46)
 #    rounding = 50
@@ -31,7 +31,7 @@ background {
 
 #Circle
 #shape {
-#   monitor = DP-3
+#   monitor =
 #    size = 800, 800 # Make it a square
 #    color = rgba(0, 0, 0, 0.46)
 #    rounding = 400 # Half of the size (800 / 2)
@@ -43,7 +43,7 @@ background {
 ######################### Labels ###########################
 #Date (Day of the Week)
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:86400000] echo -n "$(date +'%A')"
     color = rgba(255, 255, 255, 0.8)
     font_size = 70
@@ -56,7 +56,7 @@ label {
 }
 #Hour-Time
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:1000] echo "$(date +"%I")"
     text = cmd[update:1000] echo "$(date +"%H")"
     color = rgba(253, 253, 253, 0.8)
@@ -69,7 +69,7 @@ label {
 }
 # AM/PM Indicator
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:1000] echo "$(date +'%p')"
     color = rgba(255, 255, 255, 0.8) # Matching the Minute-Time color
     text_orientation = vertical
@@ -83,7 +83,7 @@ label {
 }
 #Minute-Time
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:1000] echo "$(date +"%M")"
     color = rgba(182, 37, 204, 0.8)
     font_size = 240
@@ -97,7 +97,7 @@ label {
 
 # USER
 label {
-    monitor = DP-3
+    monitor =
     text =   $USER
     color = rgba(255, 255, 255, 0.8)
 #   text_orientation = vertical
@@ -111,7 +111,7 @@ label {
 
 # INPUT FIELD
 input-field {
-    monitor = DP-3
+    monitor =
     size = 300, 60
     outline_thickness = 2
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
@@ -133,7 +133,7 @@ input-field {
 ################################SCRIPTS############################
 # uptime
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:60000] $HOME/.config/mpvlock/scripts/uptime.sh
     color = rgba(255, 255, 255, 0.8)
     font_size = 25
@@ -146,7 +146,7 @@ label {
 # remember to change the weather location of weather.sh located in $HOME/.config/mpvlock/scripts/
 #Weather temp
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:3600000] $HOME/.config/mpvlock/scripts/weather.sh
     color = rgba(182, 37, 204, 0.8)
     font_size = 70
