--- a/.config/mpvlock/themes/solitude/mpvlock.conf
+++ b/.config/mpvlock/themes/solitude/mpvlock.conf
@@ -7,7 +7,7 @@
  ############## solitude theme for mpvlock ###################                                                             
 
 background {
-    monitor = DP-3
+    monitor =
     path = $HOME/.config/mpvlock/theme/solitude/1.mp4
     mpvpaper_mute = 0 # mute = 1, unmute = 0
     mpvpaper_fps = 60
@@ -19,7 +19,7 @@ background {
 
 #Rectangle
 #shape {
-#    monitor = DP-3
+#    monitor =
 #    size = 800, 1500
 #    color = rgba(0, 0, 0, 0.46)
 #    rounding = 50
@@ -30,7 +30,7 @@ background {
 
 #Circle
 #shape {
-#   monitor = DP-3
+#   monitor =
 #    size = 800, 800 # Make it a square
 #    color = rgba(0, 0, 0, 0.46)
 #    rounding = 400 # Half of the size (800 / 2)
@@ -41,7 +41,7 @@ background {
 
 #Date (Day of the Week)
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:86400000] echo -n "$(date +'%A')"
     color = rgba(255, 255, 255, 0.8)
     font_size = 70
@@ -54,7 +54,7 @@ label {
 }
 #Hour-Time
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:1000] echo "$(date +"%I")"
     text = cmd[update:1000] echo "$(date +"%H")"
     color = rgba(253, 253, 253, 0.8)
@@ -67,7 +67,7 @@ label {
 }
 # AM/PM Indicator
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:1000] echo "$(date +'%p')"
     color = rgba(255, 255, 255, 0.8) # Matching the Minute-Time color
     text_orientation = vertical
@@ -81,7 +81,7 @@ label {
 }
 #Minute-Time
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:1000] echo "$(date +"%M")"
     color = rgba(114, 137, 185, 0.8)
     font_size = 240
@@ -94,7 +94,7 @@ label {
 
 # USER
 label {
-    monitor = DP-3
+    monitor =
     text =   $USER
     color = rgba(255, 255, 255, 0.8)
 #   text_orientation = vertical
@@ -107,7 +107,7 @@ label {
 
 # INPUT FIELD
 input-field {
-    monitor = DP-3
+    monitor =
     size = 300, 60
     outline_thickness = 2
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
@@ -129,7 +129,7 @@ input-field {
 
 # uptime
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:60000] $HOME/.config/mpvlock/scripts/uptime.sh
     color = rgba(255, 255, 255, 0.8)
     font_size = 25
@@ -142,7 +142,7 @@ label {
 # remember to change the weather location of weather.sh located in $HOME/.config/mpvlock/scripts/
 #Weather temp
 label {
-    monitor = DP-3
+    monitor =
     text = cmd[update:3600000] $HOME/.config/mpvlock/scripts/weather.sh
     color = rgba(114, 137, 185, 0.8)
     font_size = 70
@@ -155,7 +155,7 @@ label {
 
 #GPU temp
 #label {
-#    monitor = DP-3
+#    monitor =
 #    text = cmd[update:60000] $HOME/.config/mpvlock/scripts/gputemp.sh
 #    color = rgba(182, 37, 204, 0.8)
 #    font_size = 25
@@ -168,7 +168,7 @@ label {
 
 #CPU temp
 #label {
-#    monitor = DP-3
+#    monitor =
 #    text = cmd[update:60000] $HOME/.config/mpvlock/scripts/cputemp.sh
 #    color = rgba(255, 255, 255, 0.8)
 #    font_size = 25
