--- a/.config/mpvlock/mpvlock.conf
+++ b/.config/mpvlock/mpvlock.conf
@@ -1,26 +1,20 @@
-#███╗   ██╗███████╗ ██████╗ ███╗   ██╗         ██╗██╗███╗   ██╗██╗  ██╗
-#████╗  ██║██╔════╝██╔═══██╗████╗  ██║         ██║██║████╗  ██║╚██╗██╔╝
-#██╔██╗ ██║█████╗  ██║   ██║██╔██╗ ██║         ██║██║██╔██╗ ██║ ╚███╔╝ 
-#██║╚██╗██║██╔══╝  ██║   ██║██║╚██╗██║    ██   ██║██║██║╚██╗██║ ██╔██╗ 
-#██║ ╚████║███████╗╚██████╔╝██║ ╚████║    ╚█████╔╝██║██║ ╚████║██╔╝ ██╗
-#╚═╝  ╚═══╝╚══════╝ ╚═════╝ ╚═╝  ╚═══╝     ╚════╝ ╚═╝╚═╝  ╚═══╝╚═╝  ╚═╝                                                                                   
-##################### Neon Jinx Theme for mpvlock ######################
-
+ ######################Sample config######################                                                            
 background {
-    monitor = 
-    path = $HOME/.config/mpvlock/themes/neon_jinx/neon_jinx.mp4
+    monitor = #Specifies which monitor, leave blank for default monitor
+    path = $HOME/.config/mpvlock/themes/unixpornmods_can_tongue_my_anus.mp4
+    fallback_path = $HOME/.config/mpvlock/themes/unixpornmods_can_tongue_my_anus.png #Set fallback to png so that if mpvpaper or video playback dies there is a image fallback
     mpvpaper_mute = 0 # mute = 1, unmute = 0
-    mpvpaper_fps = 60
-    mpvpaper_panscan = 1.0 
-    mpvpaper_hwdec = auto
-    mpvpaper_layer = overlay
+    mpvpaper_fps = 60 #Adjust based on your system’s performance or the video’s native frame rate (e.g., 30 for smoother playback on lower-end systems).
+    mpvpaper_panscan = 1.0  #1.0 fills screen, 0.0 fits video within screen (potentially adding letterboxing)
+    mpvpaper_hwdec = auto #options are vaapi/nvdec/vpau and no (disable hardware decoding)
+    mpvpaper_layer = overlay #other possible options include background, bottom, top
     zindex = -1
 }
 
 ##################### Example shapes #######################
 #Rectangle
 #shape {
-#    monitor =
+#    monitor = DP-3
 #    size = 800, 1500
 #    color = rgba(0, 0, 0, 0.46)
 #    rounding = 50
@@ -31,7 +25,7 @@ background {
 
 #Circle
 #shape {
-#   monitor =
+#   monitor = DP-3
 #    size = 800, 800 # Make it a square
 #    color = rgba(0, 0, 0, 0.46)
 #    rounding = 400 # Half of the size (800 / 2)
@@ -83,7 +77,7 @@ label {
 }
 #Minute-Time
 label {
-    monitor =
+    monitor = DP-3
     text = cmd[update:1000] echo "$(date +"%M")"
     color = rgba(182, 37, 204, 0.8)
     font_size = 240
